--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.2.0",
     "vuepress": "^1.0.3"
   }
 }
