--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
         uses: burnett01/rsync-deployments@4.0
         with:
           switches: -avzr --delete
-          path: dist/
+          path: docs/.vuepress/dist
           remote_path: ${{ secrets.TX_SOURCE }}
           remote_host: ${{ secrets.TX_HOST }}
           remote_user: ${{ secrets.TX_USER}}
